--- a/appdev1-task-manager/src/App.css
+++ b/appdev1-task-manager/src/App.css
@@ -5,48 +5,15 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #ffffffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #252525aa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #1a1818;
-}
-
-.formStyle {
+div {
   display: flex;
   flex-direction: column;
+  margin: auto;
 }
 
-.formStyle {
+div {
   background-color: #000000;
   border-radius: 8px;
   padding: 20px;
@@ -57,28 +24,12 @@
   text-align: center;
 }
 
-.formStyle h3 {
+h2 {
   margin-bottom: 20px;
   color: #cd03ff;
   font-size: 1.5rem;
 }
 
-input[type="text"],
-textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  font-size: 16px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-sizing: border-box;
-  outline: none;
-}
-
-textarea {
-  height: 80px;
-  resize: none;
-}
 
 button[type="submit"] {
   background-color: #cd03ff;
